<resources>
    <string name="app_name">Banco Online</string>
    <string name="mail">Correo electronico</string>
    <string name="cuit">CUIT</string>
    <string name="moneda">Moneda</string>
    <string name="dolar">US$</string>
    <string name="pesoArg">AR$</string>
    <string name="montoInvertir">Monto a invertir</string>
    <string name="dias">Dias</string>
    <string name="avisarVencimiento">Avisar por mail antes del vencimiento</string>
    <string name="textoBoton">HACER PLAZO FIJO</string>
    <string name="textoCheckBox">Aceptar terminos y condiciones</string>
    <string name="acreditar">ACREDITAR EN CUENTA</string>
    <string name="renovar">RENOVAR AUTOMATICAMENTE</string>
    <string name="diasPF">" dias de plazo."</string>
    <string name="toastTerminosCondiciones">Es obligatorio aceptar las condiciones</string>
    <string name="toastPFInvalido">ERROR</string>
    <string name="toastPFValido">EXITO</string>
    <string name="mailIncompleto">"Mail incompleto\n"</string>
    <string name="cuitIncompleto">"CUIT incompleto\n"</string>
    <string name="montoIncorrecto">"Monto incorrecto\n"</string>
</resources>
